# rustbench-eval

./: Cargo.toml  GEMINI.md  README.md  results_20260125_230959.jsonl  results_20260125_232224.jsonl  results_20260125_232742.jsonl  results_20260125_235106.jsonl  results_20260126_001536.jsonl  results_20260126_002039.jsonl  results_20260126_003757.jsonl  results_nemotron_20260227_003855.jsonl  results_nemotron_fixed_20260227_004612.jsonl  results_qwen35_35b_a3b_20260226_234658.jsonl  results_qwen35_35b_a3b_fixed_20260227_005237.jsonl  results_qwen3_coder_next_reap_mlx_20260227_011538.jsonl  results_qwen3_coder_reap_25b_20260227_000956.jsonl  results_strand_14b_20260227_000741.jsonl
src/: db.rs  evaluator.rs  lm_studio.rs  main.rs  task.rs
tasks/: example_tasks.jsonl  rustbench_tasks.jsonl
